--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -27,9 +27,10 @@
  </head>
     <body class="root">        
         <div class="content-box-profile">
-            <div class="stat ">
-                Статистика
-            </div>
+            <ul class="navbar-vitae">
+                <li><a class="navbar-vitae-a-black-passive">Статистика</a></li>
+                <li><a href="https://anamnesis-vitae.netlify.app/" class="navbar-vitae-a-white-active">Назад</a></li>
+            </ul>
             <div class="diag_box">
                 <div id="air" class="diag" ></div>
             </div>            
